tests/compile_fail/009_buffer_zero_size.vox
a buffer called "bad" is 0 bytes.
